smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata/invalid-object-text-block-key.smithy
// Syntax error at line 3, column 3: Expected one of RBRACE('}'), STRING('"'), IDENTIFIER; but found TEXT_BLOCK('"""\n  Key"""') | Model
metadata foo = {
  """
  Key""": "hello"
}
